feat(backend): unauthenticated get incoming payment (#1952)
* feat(backend): mount resource server routes explicitly

* chore: formatting

* feat(backend): wip unauthenticated incoming payment get

* fix(backend): token introspection middleware

* chore(backend): cleanup

* chore(backend): cleanup

* test(backend): update incoming payment tests

* test(backend): add tests for new option

* feat(backend): add unauthed incoming payment

* fix: accidentally removed postman request

* refactor(backend): optional sig params

* fix(backend): typo

* fix(backend): unused args

---------
